refactor: Migrated build.gradle to build.gradle.kts