@@ -39,26 +39,26 @@ public class NumberDataTypeTest {
     @Test
     public void givenTwoNumbers_whenDivide_thenCorrect() {
         // byte
-        Assert.assertEquals((byte) 5, DataType.int8().div(new Byte((byte) 10), new Byte((byte) 2)).byteValue());
-        Assert.assertEquals((byte) -3, DataType.int8().div(new Byte((byte) -6), new Byte((byte) 2)).byteValue());
+        Assert.assertEquals((byte) 5, DataType.int8().div(Byte.valueOf((byte) 10), Byte.valueOf((byte) 2)).byteValue());
+        Assert.assertEquals((byte) -3, DataType.int8().div(Byte.valueOf((byte) -6), Byte.valueOf((byte) 2)).byteValue());
         Assert.assertEquals((byte) 5, DataType.uint8().div(UByte.of(10), UByte.of(2)).byteValue());
         Assert.assertEquals((byte) 125, DataType.uint8().div(UByte.of(-6), UByte.of(2)).byteValue());
 
         // short
-        Assert.assertEquals((short) 5, DataType.int16().div(new Short((short) 10), new Short((short) 2)).shortValue());
-        Assert.assertEquals((short) -3, DataType.int16().div(new Short((short) -6), new Short((short) 2)).shortValue());
+        Assert.assertEquals((short) 5, DataType.int16().div(Short.valueOf((short) 10), Short.valueOf((short) 2)).shortValue());
+        Assert.assertEquals((short) -3, DataType.int16().div(Short.valueOf((short) -6), Short.valueOf((short) 2)).shortValue());
         Assert.assertEquals((short) 5, DataType.uint16().div(UShort.of(10), UShort.of(2)).shortValue());
         Assert.assertEquals((short) 32765, DataType.uint16().div(UShort.of(-6), UShort.of(2)).shortValue());
 
         // int
-        Assert.assertEquals(5, DataType.int32().div(new Integer(10), new Integer(2)).intValue());
-        Assert.assertEquals(-3, DataType.int32().div(new Integer(-6), new Integer(2)).intValue());
+        Assert.assertEquals(5, DataType.int32().div(Integer.valueOf(10), Integer.valueOf(2)).intValue());
+        Assert.assertEquals(-3, DataType.int32().div(Integer.valueOf(-6), Integer.valueOf(2)).intValue());
         Assert.assertEquals(5, DataType.uint32().div(UInt.of(10), UInt.of(2)).intValue());
         Assert.assertEquals(2147483645, DataType.uint32().div(UInt.of(-6), UInt.of(2)).intValue());
 
         // long
-        Assert.assertEquals(5L, DataType.int64().div(new Long(10L), new Long(2L)).longValue());
-        Assert.assertEquals(-3L, DataType.int64().div(new Long(-6L), new Long(2L)).longValue());
+        Assert.assertEquals(5L, DataType.int64().div(Long.valueOf(10L), Long.valueOf(2L)).longValue());
+        Assert.assertEquals(-3L, DataType.int64().div(Long.valueOf(-6L), Long.valueOf(2L)).longValue());
         Assert.assertEquals(5L, DataType.uint64().div(ULong.of(10L), ULong.of(2L)).longValue());
         Assert.assertEquals(9223372036854775805L, DataType.uint64().div(ULong.of(-6L), ULong.of(2L)).longValue());
     }
